# kyle-tuesday-health-tech-assignment

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
cms_cclf/: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml
cms_cclf/models/: beneficiary_demographics.sql  parta_claims_header.sql  parta_claims_revenue_center_detail.sql  parta_diagnosis_code.sql  parta_procedure_code.sql  partb_dme.sql  partb_physicians.sql  sources.yml
cms_cclf/models/staging/: stg_beneficiary_demographics.sql  stg_part_a_claims_header.sql  stg_part_a_claims_revenue_center_detail.sql  stg_part_a_diagnosis_code.sql  stg_part_a_procedure_code.sql  stg_part_b_dme.sql  stg_part_b_physicians.sql
cms_synpufs/: .gitignore  .sqlfluff  .user.yml  README.md  dbt_project.yml  dev.duckdb  package-lock.yml  profiles.yml
cms_synpufs/macros/: generate_schema_name.sql
cms_synpufs/models/staging/: stg_beneficiaries.sql  stg_medical_claims.sql
cms_synpufs/tests/staging/: test_stg_beneficiaries_row_count.sql  test_stg_medical_claims_row_count.sql
hospice_quality_metrics/: .gitignore  .sqlfluff  .user.yml  README.md  dbt_project.yml  profiles.yml
hospice_quality_metrics/db/: hospice_quality_metrics.db
hospice_quality_metrics/models/analytics/: analytics.yml  dim_hospice_provider_geography.sql  fact_hospice_provider_flattened.sql  fact_hospice_provider_missing_metrics_by_region.sql
hospice_quality_metrics/models/staging/: staging.yml  stg_hospice_provider.sql  stg_hospice_provider_flattened.sql
hospice_quality_metrics/notebooks/: hospice_analysis.ipynb
(+4 files in other folders)
